/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.microlabs.behavioral.observer;


/**
 * @author rolex
 * @since 2020
 */
public interface WeatherObserver {

    void update(String args);
}
